migrate to gradle version 2
Signed-off-by: stelios maurommatakis <steliosmavr@cytech.gr>